# AIFRED_Foundation

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows-build.yml  windows_beta_package.yml
apps/aifred_chat/: .gitignore  README.md  package-lock.json  package.json
apps/aifred_chat/android/app/src/main/: AndroidManifest.xml
apps/aifred_chat/android/app/src/main/assets/www/: app.js  index.html  styles.css
apps/aifred_chat/android/app/src/main/res/values/: strings.xml
apps/aifred_chat/docs/: AIFRED_DESKTOP_REPLICA_LOG.md  AIFRED_Execution_Log_and_Repository_Report.docx
apps/aifred_chat/scripts/: build_android_apk.sh  runtime_smoke.js  sync_android_assets.sh
apps/aifred_chat/src/: main.js  preload.js
apps/aifred_chat/src/renderer/: app.js  index.html  styles.css
apps/aifred_chat/src/renderer/cognition/: intent.js  memory_score.js  personality.js  profile_store.js  router.js
apps/dawai_desktop/: CMakeLists.txt  README.md
apps/dawai_desktop/src/: main.cpp
cmake/: CompilerSettings.cmake
data/benchmarks/: README.md  test_pop_profile.json
docs/: ENGINE_CONTRACT.md  KNOWN_ISSUES.md  MASTER_SPEC.md  RELEASE_NOTES_v1.0.0-beta.md  REPO_MAP.md
packaging/windows/: AIFR3D.iss
plugins/aifr3d_vst3/: CMakeLists.txt  README.md
plugins/aifr3d_vst3/TestKit/: README.md
plugins/aifr3d_vst3/TestKit/expected/: ranges.json
plugins/aifr3d_vst3/TestKit/tools/: generate_test_wavs.py  run_testkit_analysis.py  verify_testkit_outputs.py
plugins/aifr3d_vst3/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/aifr3d_vst3/src/analysis/: AnalysisJob.h  AnalysisService.cpp  AnalysisService.h  AnalysisTypes.h
plugins/aifr3d_vst3/src/export/: ChartRenderer.cpp  ChartRenderer.h  ReportExporter.cpp  ReportExporter.h
scripts/: package_windows_artifact.ps1  verify_copy_integrity.sh  verify_phase_build.sh
(+1 files in other folders)
